<resources>
    <string name="shortcut_new_tab_short">
        New tab
    </string>
    <string name="shortcut_new_download_short">
        New download
    </string>
    <string name="shortcut_new_download_not_supported">
        The download shortcut is only compatible with weberPro download manager. To continue, you must set the weberPro download manager as default in browser Setting.
    </string>
    <string name="permission_storage_granted">
        Permission granted !
    </string>
    <string name="permission_storage_denied">
        Permission denied, The application may not work properly
    </string>
    <string name="permission_location_granted">
        Location permission granted !
    </string>
    <string name="permission_location_denied">
        Can not enable this option without location access, For security reason it is recommended do not allow websites to access location in unnecessary cases.
    </string>
    <string name="permission_draw_request">
        To use the Weber floating browser feature there is a need to enable "draw over other apps" permission. please click on the OK button then enable this permission.
    </string>
    <string name="intro_omnibox_swipe_and_text_title">
        Web Pages manager
    </string>
    <string name="intro_omnibox_swipe_and_text_description">
        To view and control the opened web pages and tabs, drag (swipe) this to the top
        \n
        Also, please click here to type URL or enter searchable word
    </string>
    <string name="intro_omnibox_bookmark_title">
        Bookmark
    </string>
    <string name="intro_omnibox_bookmark_description">
        From here you can add the WebSites to your bookmark
    </string>
    <string name="intro_omnibox_menu_title">
        Application Menu
    </string>
    <string name="intro_omnibox_menu_description">
        From here you can access the menu options
    </string>
    <string name="intro_tab_title">
        Tabs Manager
    </string>
    <string name="intro_tab_description">
        With a swipe tab to the top or bottom, you can close it
        \n
        You can also switch between them by clicking on the tabs
    </string>
    <string name="intro_omnibox_swipe_to_switch_title">
        Swipe to switch
    </string>
    <string name="intro_omnibox_swipe_to_switch_description">
        swipe left or right to switch tabs
    </string>
    <string name="intro_tab_swipe_title">
        Opened tabs
    </string>
    <string name="intro_tab_swipe_description">
        swipe up or down to close tab
        \n
        click on tab to open webpage
    </string>
    <string name="intro_tab_add_title">
        New tab
    </string>
    <string name="intro_tab_add_description">
        click on this button to add new tab
    </string>
    <string name="android_ago_just_now">
        Just Now !
    </string>
    <string name="album_title_bookmarks">
        Bookmarks
    </string>
    <string name="album_title_history">
        History
    </string>
    <string name="album_title_home">
        Home page
    </string>
    <string name="album_untitled">
        Untitled
    </string>
    <string name="download_exist_message">
        A file with this name already exists, do you want to replace it ?
    </string>
    <string name="downloading_caption">
        downloading
    </string>
    <string name="downloaded_caption">
        completed
    </string>
    <string name="item_bookmarks">
        Bookmarks
    </string>
    <string name="item_share">
        Share
    </string>
    <string name="item_add_to_home">
        Add to home
    </string>
    <string name="share_page_sent">
        
    </string>
    <string name="intent_choose">
        choose application
    </string>
    <string name="item_history">
        History
    </string>
    <string name="item_setting">
        Setting
    </string>
    <string name="item_screenshot">
        Take screenshot
    </string>
    <string name="item_PDF">
        Save page
    </string>
    <string name="item_downloads">
        Downloads
    </string>
    <string name="item_Find">
        Find in page
    </string>
    <string name="item_about">
        About
    </string>
    <string name="downloads_label">
        Downloads
    </string>
    <string name="download_address_dialog_hint">
        Enter link or address
    </string>
    <string name="download_dialog_name_hint">
        File name
    </string>
    <string name="download_dialog_title">
        Download
    </string>
    <string name="download_dialog_start_button">
        start download
    </string>
    <string name="download_dialog_add_button">
        Add to list
    </string>
    <string name="download_dialog_size_text">
        File size :
    </string>
    <string name="download_dialog_size_unknown_text">
        File size : unknown
    </string>
    <string name="download_dialog_zero_size_text">
        File size : 0
    </string>
    <string name="download_dialog_edittext_error">
        This field cannot be blank
    </string>
    <string name="clear_label">
        Clear
    </string>
    <string name="clear_menu_done_all">
        Done all
    </string>
    <string name="clear_title_quit">
        Clear when application exits
    </string>
    <string name="clear_title_bookmarks">
        Clear Bookmarks
    </string>
    <string name="dialog_button_positive">
        OK
    </string>
    <string name="dialog_button_negative">
        Cancel
    </string>
    <string name="setting_title_browser">
        Browser Settings
    </string>
    <string name="setting_title_search_engine">
        Search Engine
    </string>
    <string name="setting_summary_search_engine_google">
        Google
    </string>
    <string name="setting_title_omnibox_position">
        Omnibox Position
    </string>
    <string name="setting_summary_omnibox_position_top">
        Top
    </string>
    <string name="setting_title_omnibox_control">
        Omnibox Control
    </string>
    <string name="setting_summary_omnibox_control">
        Swipe omnibox left/right to switch tabs
    </string>
    <string name="setting_title_bubble_button_status">
        Floating browser status
    </string>
    <string name="setting_summary_bub">
        Bubble button status
    </string>
    <string name="setting_title_default_downloader">
        Default downloader
    </string>
    <string name="setting_summary_default_downloader">
        Default download manager
    </string>
    <string name="setting_title_volume_control">
        Volume buttons usage
    </string>
    <string name="setting_summary_vc_switch_tabs">
        Switch Tabs
    </string>
    <string name="setting_title_images">
        Images
    </string>
    <string name="setting_summary_images">
        Load images in webpage
    </string>
    <string name="setting_title_cookie">
        Cookies
    </string>
    <string name="setting_summary_cookie">
        Enable Cookies
    </string>
    <string name="setting_title_javascript">
        JavaScript
    </string>
    <string name="setting_summary_javascript">
        Enable JavaScript
    </string>
    <string name="setting_title_location">
        Location
    </string>
    <string name="setting_summary_location">
        Allow websites to access your location
    </string>
    <string name="setting_title_multiple_windows">
        Multiple Windows
    </string>
    <string name="setting_summary_multiple_windows">
        Enable Multiple windows
    </string>
    <string name="setting_title_scroll_bar">
        Scroll Bar
    </string>
    <string name="setting_summary_scroll_bar">
        Show/Hide scroll bar on webpages
    </string>
    <string name="setting_title_text_reflow">
        Text Reflow
    </string>
    <string name="setting_summary_text_reflow">
         Enable text reflow
    </string>
    <string name="setting_title_user_agent">
        User Environment
    </string>
    <string name="setting_summary_user_agent_default">
        Mobile
    </string>
    <string name="setting_title_rendering">
        Webpage Rendering
    </string>
    <string name="setting_summary_rendering_default">
        Default
    </string>
    <string name="setting_title_adblock">
        AdBlock
    </string>
    <string name="setting_summary_adblock">
        Enable AdBlock
    </string>
    <string name="setting_title_whitelist">
        Whitelist
    </string>
    <string name="setting_summary_whitelist">
        Allow these sites show ads
    </string>
    <string name="setting_title_export_whilelist">
        Export whitelist
    </string>
    <string name="setting_title_import_whilelist">
        Import whitelist
    </string>
    <string name="setting_title_data">
        Data setting
    </string>
    <string name="setting_title_passwords">
        Password
    </string>
    <string name="setting_summary_passwords">
        Save Passwords
    </string>
    <string name="setting_title_export_bookmarks">
        Export Bookmarks
    </string>
    <string name="setting_title_import_bookmarks">
        Import Bookmarks
    </string>
    <string name="setting_title_clear_control">
        Clear Control
    </string>
    <string name="setting_title_others">
        Others
    </string>
    <string name="setting_title_version">
        Version
    </string>
    <string name="setting_title_about">
        About
    </string>
    <string name="pref_file_pick_title">
        save folder
    </string>
    <string name="pref_file_pick_summary">
        Default downloads location
    </string>
    <string name="pref_auto_resume_title">
        Auto resume
    </string>
    <string name="pref_auto_resume_summary">
        Automatically resume download after error
    </string>
    <string name="pref_parts_number_message_title">
        Number of threads
    </string>
    <string name="pref_parts_number_message_summary">
        Select how much threads/parts to use for downloading
    </string>
    <string name="pref_downloads_number_message_title">
         Synchronous download
    </string>
    <string name="pref_downloads_number_message_summary">
         Download multiple files simultaneously
    </string>
    <string name="pref_errors_number_title">
        Maximum number of errors
    </string>
    <string name="pref_errors_number_summary">
        Maximum number of errors allowed per download
    </string>
    <string name="pref__main_errors_number_title">
        Maximum number of access errors
    </string>
    <string name="pref_main_errors_number_summary">
        Maximum number of access errors allowed per download
    </string>
    <string name="pref_multi_threading_title">
        Multi threading type
    </string>
    <string name="pref_multi_threading_summary_smart">
        Smart
    </string>
    <string name="pref_downloading_general_setting">
        Downloads general setting
    </string>
    <string name="pref_downloading_download_size_limits">
        Size limits
    </string>
    <string name="pref_downloading_size_limits_checkbox_title">
        Internet usage limit in downloads
    </string>
    <string name="pref_downloading_size_limits_checkbox_summary">
        Enable limits in downloads (it will be disabled after stopping all downloads)
    </string>
    <string name="pref_downloading_size_each_download_title">
        Usage limits in each download
    </string>
    <string name="pref_downloading_size_each_download_summary">
        Maximum Internet usage per download (per Megabyte)

        , (it will be removed after stopping all downloads)
    </string>
    <string name="pref_downloading_size_all_downloads_title">
        Usage limits in each queue
    </string>
    <string name="pref_downloading_size_all_downloads_summary">
        Maximum Internet usage per asynchronous queue (per Megabyte)
        , (it will be removed after stopping all downloads)
    </string>
</resources>